Google oauth added , some type script has been improved

--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
-NEXT_PUBLIC_SERVER_URL= http://localhost:5000/api
+NEXT_PUBLIC_SERVER_URL= https://wild-stole-pike.cyclic.app/api
+NEXTAUTH_SECRET="Openappin Assignment"
+GOOGLE_ID=107334785301-4sf62nsfhga52p8h5g5f44h6c78pqe08.apps.googleusercontent.com
+
+
+GOOGLE_SECRET=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
